# idle_core

./: .gitignore  README.MD  pyproject.toml
idle_core/: __main__.py
idle_core/io/: __init__.py  base.py  file_io.py
idle_core/models/: __init__.py  player.py
idle_core/world/: world.py
