[tool.poetry]
name = "idle_core"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.1"
structlog = "^22.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.15.0"
mypy = "^0.971"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pylint]
max-line-length = 120
disable = ["missing-module-docstring", 
            "missing-class-docstring", 
            "missing-function-docstring"]
